--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:OnoAir-App": "node dist/ono-air-app/server/server.mjs"
+    "serve:ssr:OnoAir-App": "node dist/ono-air-app/server/server.mjs",
+    "clean": "rimraf node_modules dist && npm cache clean --force"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.0",
+    "@angular/animations": "^19.0.5",
     "@angular/cdk": "^19.0.4",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
@@ -21,7 +22,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/platform-server": "^19.0.0",
-    "@angular/router": "^19.0.0",
+    "@angular/router": "^19.0.5",
     "@angular/ssr": "^19.0.6",
     "express": "^4.18.2",
     "ono-air-app": "file:",
@@ -42,6 +43,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "rimraf": "^5.0.0",
     "typescript": "~5.6.2"
   }
 }
