--- a/src/defaults/package.json
+++ b/src/defaults/package.json
@@ -25,7 +25,8 @@
 	"license": "MIT",
 	"readmeFilename": "README.md",
 	"dependencies": {
-		"clone": "^1.0.2"
+		"clone": "^1.0.2",
+		"defaults": "file:"
 	},
 	"devDependencies": {
 		"tap": "^2.0.0"
