--- a/src/depd/package.json
+++ b/src/depd/package.json
@@ -11,8 +11,8 @@
   "repository": "dougwilson/nodejs-depd",
   "browser": "lib/browser/index.js",
   "devDependencies": {
-    "benchmark": "2.1.4",
     "beautify-benchmark": "0.2.4",
+    "benchmark": "2.1.4",
     "eslint": "5.7.0",
     "eslint-config-standard": "12.0.0",
     "eslint-plugin-import": "2.14.0",
@@ -41,5 +41,8 @@
     "test": "mocha --reporter spec --bail test/",
     "test-ci": "istanbul cover --print=none node_modules/mocha/bin/_mocha -- --reporter spec test/ && istanbul report lcovonly text-summary",
     "test-cov": "istanbul cover --print=none node_modules/mocha/bin/_mocha -- --reporter dot test/ && istanbul report lcov text-summary"
+  },
+  "dependencies": {
+    "depd": "file:"
   }
 }
